--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,25 @@
 {
-	"dependencies": {
-		"parcel-bundler": "^1.12.5"
-	}
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.59.0",
+        "@typescript-eslint/parser": "^5.59.0",
+        "eslint": "^8.38.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-config-standard-with-typescript": "^34.0.1",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-n": "^15.0.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-promise": "^6.0.0",
+        "prettier": "^2.8.7",
+        "typescript": "^5.0.4"
+    },
+    "prettier": {
+        "semi": true,
+        "trailingComma": "none",
+        "singleQuote": true,
+        "printWidth": 80
+    },
+    "scripts": {
+        "lint": "eslint . --ext .ts",
+        "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
+    }
 }
