Firt version axios

--- a/web/package.json
+++ b/web/package.json
@@ -21,9 +21,11 @@
     "scripts": {
         "lint": "eslint . --ext .ts",
         "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-        "start:parcel": "pnpm parcel index.html"
+        "start:parcel": "pnpm parcel index.html",
+        "json-server": "json-server -w db.json"
     },
     "dependencies": {
+        "axios": "^1.4.0",
         "json-server": "^0.17.3"
     }
 }
