--- a/web/package.json
+++ b/web/package.json
@@ -2,6 +2,7 @@
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.59.0",
         "@typescript-eslint/parser": "^5.59.0",
+        "buffer": "^5.5.0||^6.0.0",
         "eslint": "^8.38.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-config-standard-with-typescript": "^34.0.1",
@@ -26,6 +27,7 @@
     },
     "dependencies": {
         "axios": "^1.4.0",
-        "json-server": "^0.17.3"
+        "json-server": "^0.17.3",
+        "parcel": "^2.9.3"
     }
 }
