--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,7 @@
         "lint": "eslint . --ext .ts",
         "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
         "start:parcel": "pnpm parcel index.html",
-        "json-server": "json-server -w db.json"
+        "json:server": "json-server -w db.json"
     },
     "dependencies": {
         "axios": "^1.4.0",
